<resources>
    <string name="app_name">Decagon Android 007</string>
    <string name="add_contact_action_button">Add contact action button</string>
    <string name="profile_image">profile image</string>
    <string name="t">T</string>
    <string name="firstname">Firstname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call_button">call button</string>
    <string name="message_button">message button</string>
    <string name="last_name_optional">Last Name (optional)</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="add_contact">Add contact</string>
    <string name="add_first_name">Add first name</string>
    <string name="add_last_name">Add last name (optional) </string>
    <string name="edit_last_name">Edit last name (optional) </string>
    <string name="add_phone_number">Add phone number</string>
    <string name="added_contact">Contact added successfully</string>
    <string name="added_contact_failure">Contact was not added</string>
    <string name="error">%1$s</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="_08187904709">08187904709</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
</resources>