<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:padding="50dp"
        tools:context=".view.AddContactFragment">

        <TextView
            android:id="@+id/tv_add_contact_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/add_contact"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">


            <EditText
                android:id="@+id/tv_edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/input_styles"
                android:singleLine="true"
                android:hint="@string/add_first_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/tv_edit_text_surname_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/input_styles"
                android:singleLine="true"
                android:hint="@string/add_last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tv_edit_text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_phone_number"
                android:inputType="phone"
                style="@style/input_styles"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/save"/>

    </LinearLayout>
</layout>